// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`handleCollection should return the appropriate transformer and model for a collection 1`] = `
Object {
  "model": PublicationModel {
    "db": undefined,
    "name": "publications",
  },
  "modelName": "publications",
  "transformer": [Function],
}
`;

exports[`handleCollection should return the appropriate transformer and model for a collection 2`] = `
Object {
  "model": PublicationModel {
    "db": undefined,
    "name": "publications",
  },
  "modelName": "publications",
  "transformer": [Function],
}
`;

exports[`handleCollection should return the appropriate transformer and model for a collection 3`] = `
Object {
  "model": FilmModel {
    "db": undefined,
    "name": "films",
  },
  "modelName": "films",
  "transformer": [Function],
}
`;
